fix: update swagger documentation and rewrite logic auth
