# cmd/api/main.go
@@ -6,15 +6,6 @@ import (
 	"support-ticket.com/internal/app"
 )
 
-// @title Support Ticket SLA Processing System API
-// @version 1.0
-// @description REST API for support ticket SLA processing system.
-// @host localhost:8080
-// @BasePath /api/v1
-
-// @securityDefinitions.apikey BearerAuth
-// @in header
-// @name Authorization
 func main() {
 	application := app.NewApp()
 
