# internal/dto/response/auth_response.go
@@ -1,10 +1,11 @@
 package response
 
 type LoginResponse struct {
-	AccessToken string `json:"access_token"`
-	TokenType   string `json:"token_type"`
-	ExpiresIn   int    `json:"expires_in"`
-	//RefreshToken     string `json:"refresh_token"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token,omitempty"`
+	TokenType    string `json:"token_type"`
+	ExpiresIn    int    `json:"expires_in"`
+
 	//RefreshExpiresIn int    `json:"refresh_expires_in"`
 	//Scope string `json:"scope"`
 }
