# internal/dto/response/keycloak_response.go
@@ -1,10 +1,10 @@
 package response
 
 type KeycloakTokenResponse struct {
-	AccessToken string `json:"access_token"`
-	//RefreshToken     string `json:"refresh_token"`
-	TokenType string `json:"token_type"`
-	ExpiresIn int    `json:"expires_in"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	TokenType    string `json:"token_type"`
+	ExpiresIn    int    `json:"expires_in"`
 	//RefreshExpiresIn int    `json:"refresh_expires_in"`
 	//Scope            string `json:"scope"`
 }
